packages/typ/tests/fixtures/diagnostics/0116_core_if_condition_non_bool_10.ml.expected
File "0116_core_if_condition_non_bool_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0116_core_if_condition_non_bool_10 is not a valid module name.

File "0116_core_if_condition_non_bool_10.ml", line 1, characters 11-12:
1 | let _ = if 9 then 10 else 11
               ^
Error: The constant 9 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
