packages/typ/tests/fixtures/diagnostics/0116_core_if_condition_non_bool_10.ml
let _ = if 9 then 10 else 11
